tests/golden/type_errors/collection_helper_slice_non_number_start.cd
slice([1], "x", 1);
